后台系统更新

--- a/server/view/admin/category_add.html
+++ b/server/view/admin/category_add.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>添加记事分类</title>
+    <title>添加商品分类</title>
     {% include "./header.html" %}
 </head>
 
@@ -25,6 +25,7 @@
     </form>
     {% include "./footer.html" %}
 </body>
+
 <script>
     $(function () {
         $(".button").click(function () {
