--- a/server/view/admin/index_index.html
+++ b/server/view/admin/index_index.html
@@ -74,8 +74,8 @@
                   </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/admin/test/index" class="fa fa-circle-o" target="menuFrame">商品列表</a></li>
-                <li><a href="/admin/thing/add" class="fa fa-circle-o" target="menuFrame">添加商品</a></li>
+                <li><a href="/admin/order/now" class="fa fa-circle-o" target="menuFrame">未完成订单</a></li>
+                <li><a href="/admin/order/all" class="fa fa-circle-o" target="menuFrame">已完成订单</a></li>
               </ul>
             </li>
           </ul>
