--- a/server/view/admin/index_index.html
+++ b/server/view/admin/index_index.html
@@ -75,7 +75,7 @@
               </a>
               <ul class="treeview-menu">
                 <li><a href="/admin/order/now" class="fa fa-circle-o" target="menuFrame">未完成订单</a></li>
-                <li><a href="/admin/order/all" class="fa fa-circle-o" target="menuFrame">已完成订单</a></li>
+                <li><a href="/admin/order/all" class="fa fa-circle-o" target="menuFrame">全部订单</a></li>
               </ul>
             </li>
           </ul>
