--- a/server/view/admin/order_all.html
+++ b/server/view/admin/order_all.html
@@ -3,8 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <title>全部订单</title>
+    {% include "./header.html" %}
 </head>
 <body>
+<table id="example2" class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th>订单号</th>
+        <th>用户</th>
+        <th>手机号</th>
+        <th>地址</th>
+        <th>商品</th>
+        <th>订单状态</th>
+        <th>操作</th>
 
+    </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">编辑</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="name">商品名称</label>
+                    <input class="form-control" id="title" name="title" placeholder="请输入商品名称">
+                </div>
+                <div class="form-group">
+                    <label for="value">商品价格</label>
+                    <div class="form-group">
+                        <label class="sr-only" for="value">价格</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">￥</div>
+                            <input type="text" class="form-control" id="value" placeholder="价格">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="category">所属分类</label>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="category_name" placeholder="类别ID">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="content">商品描述</label>
+                    <form>
+                        <div class="editor"></div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" id="submit" class="btn btn-primary button" edit="">确认更新</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+{% include "./footer.html" %}
+<script>
+    $(function() {
+        var E = window.wangEditor;
+        var editor = new E('.editor');
+        editor.create();
+
+        $('#myModal').on('hidden.bs.modal', function () {
+            $('#myModal .form-control').val('');
+            editor.txt.clear();
+        });
+
+        const table = $('#example2').DataTable({
+            'paging': true,
+            "processing": true,
+            'searching': false,
+            'serverSide': true,
+            'ordering': false,
+            'info': true,
+            'autoWidth': true,
+            'ajax': '/admin/order',
+            "columns": [
+                {"data": "order_sn"},
+                {"data": "consignee"},
+                {"data": "mobile"},
+                {"data": "address"},
+                {"data":"goods.goods_name"},
+                {"data": "order_status_text"},
+            ],
+            "columnDefs": [{ //设置 编辑按钮
+                "targets": [6],
+                "data": "id",
+                "render": function (data, type, full) {
+                    return "<a class='edit' href='javascript:void(0)' edit='" + data +
+                        "'data-toggle='modal' data-target='#myModal' >编辑</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class='del' del='" +
+                        data + "'href='javascript:void(0)'>取消</a>";
+                }
+            }],
+            "oLanguage": {
+                "sLengthMenu": "每页显示 _MENU_ 条记录",
+                "sZeroRecords": "对不起，查询不到任何相关数据",
+                "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_ 条记录",
+                "sInfoEmtpy": "找不到相关数据",
+                "sInfoFiltered": "数据表中共为 _MAX_ 条记录)",
+                "sProcessing": "正在加载中...",
+                "sSearch": "搜索",
+                "sUrl": "", //多语言配置文件，可将oLanguage的设置放在一个txt文件中，例：Javascript/datatable/dtCH.txt
+                "oPaginate": {
+                    "sFirst": "第一页",
+                    "sPrevious": " 上一页 ",
+                    "sNext": " 下一页 ",
+                    "sLast": " 最后一页 "
+                }
+            }, //多语言配置
+        });
+
+        //给行绑定选中事件
+        $('#example2 tbody').on('click', 'tr', function() {
+            if ($(this).hasClass('selected')) {
+                $(this).removeClass('selected');
+            } else {
+                table.$('tr.selected').removeClass('selected');
+                $(this).addClass('selected');
+            }
+        });
+    })
+</script>
 </html>
