--- a/server/view/admin/category_add.html
+++ b/server/view/admin/category_add.html
@@ -13,10 +13,10 @@
             <div class="form-group">
                 <label for="name">分类名称</label>
                 <input class="form-control" id="name" name="name" placeholder="请输入分类名称">
-            </div>
-            <div class="form-group">
                 <label for="remark">备注</label>
                 <input class="form-control" id="remark" name="remark" placeholder="请输入备注">
+                <label for="parent">父类</label>
+                <input class="form-control" id="parent" name="parent" placeholder="请输入父类ID">
             </div>
         </div>
         <div class="box-footer">
@@ -30,18 +30,18 @@
     $(function () {
         $(".button").click(function () {
             var name=$("#name").val();
-            var remark=$("#remark").val();
+            var front_name=$("#remark").val();
+            var parent_id=$('#parent').val();
             $.ajax({
                 type: 'post',
-                url: 'http://127.0.0.1:8360/category/save',
-                data:{"name":name,"remark":remark},
+                url: '/admin/category/store',
+                data:{"name":name,"front_name":front_name,"parent_id":parent_id},
                 success: function (data) {
-                    if(data.succ){
                         alert("添加成功");
-                        window.location.href="http://127.0.0.1:8360/category/index"
-                    }else{
-                        alert("添加失败");
-                    }
+                        window.location.href="/admin/category/index"
+                },
+                error:function (err) {
+                    alert("error"+err.data);
                 }
             });
 
